--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bad-words": "^3.0.4",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "framer-motion": "^11.0.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
-    "socket.io-client": "^4.7.4",
-    "express": "^4.18.2",
     "socket.io": "^4.7.4",
-    "cors": "^2.8.5",
-    "uuid": "^9.0.1",
-    "firebase": "^10.7.1",
-    "firebase-admin": "^12.0.0",
-    "bad-words": "^3.0.4",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "socket.io-client": "^4.7.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/uuid": "^9.0.7",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "concurrently": "^8.2.2",
